--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,6 +10,9 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Vjs Mukyaprana Study Zone</title>
 
+    <!-- Google / Search Engine Tags -->
+    <meta itemprop="name" content="Vjs Mukyaprana Study Zone">
+
     <!-- Preload custom fonts -->
     <link rel="preload" href="%PUBLIC_URL%/fonts/CustomFont.woff2" as="font" type="font/woff2" crossorigin="anonymous">
     <link rel="preload" href="%PUBLIC_URL%/fonts/CustomFont-Bold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
