--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,9 +9,12 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Vjs Mukyaprana Study Zone</title>
+    <meta name="description" content="Explore Vjs Mukyaprana Study Zone for the best educational resources and study guides.">
 
     <!-- Google / Search Engine Tags -->
     <meta itemprop="name" content="Vjs Mukyaprana Study Zone">
+    <meta itemprop="description" content="Explore Vjs Mukyaprana Study Zone for the best educational resources and study guides.">
+
 
     <!-- Preload custom fonts -->
     <link rel="preload" href="%PUBLIC_URL%/fonts/CustomFont.woff2" as="font" type="font/woff2" crossorigin="anonymous">
